# sabarimal-api

./: README.md  api.py  config.ini  createPass.py  pyproject.toml  uploadQr.py
models/: __init__.py  sabrimalaqr.py
utils/: __init__.py  fileUploader.py  redis.py
